# actions-android

./: build_test_publish.yml  generate-testcases.py
.github/alpakaScreenshotUpload/: action.yml
.github/workflows/: action.yml  actions_build_feature.yml  actions_build_latest.yml  actions_build_release.yml  alpaka_screenshot_compare.yml  android_build_alpaka_upload.yml  android_build_linth_upload.yml  android_build_store_upload.yml  android_build_ubdiag_upload.yml  android_code_quality.yml  android_gradle_task.yml  android_library_artifactory.yml  android_map_sdk_verification.yml  android_pr_permission_check.yml  build.yml  build_latest.yml  build_release.yml  generate-testcases.yml  generate_testcases  generate_testcases.yml  github_generate_manual_user_testcases.yml  multiplatform_library_artifactory.yml  release.yml
.github/workflows/generatetestcases/: generate-testcases.py
alpakaScreenshotUpload/: action.yml
build-and-upload/: action.yml
buildAndUpload/: Dockerfile  action.yml  android_sdk_packages.txt  main.py  main.sh
generate-testcase/: generate-testcase.yml
githubGenerateUserTestcases/: action.yml  generate-testcases.py
maestro/: action.yml  cli.py  pyproject.toml
ubdiag-upload/: action.yml
ubdiagUpload/: Dockerfile  action.yml  main.sh
upload/: android_sdk_packages.txt  main.sh
