[project]
name = "maestro-browserstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Remo Dietlicher", email = "dietlicher@ubique.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25",
    "typer>=0.12"
]

[project.scripts]
maestro-browserstack = "maestro_browserstack.cli:app"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
